<resources>
    <string name="seo1" translatable="false">Fire Emblem Heroes</string>
    <string name="seo2" translatable="false">Fire Emblem</string>
    <string name="seo3" translatable="false">IV calculator</string>
    <string name="seo4" translatable="false">Fire Emblem boons</string>
    <string name="seo5" translatable="false">Fire Emblem banes</string>
    <string name="app_name" translatable="false">IV Finder</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9891716354513435/4265001702</string>
    <string name="hp">HP</string>
    <string name="spd">Spd</string>
    <string name="atk">Atk</string>
    <string name="def">Def</string>
    <string name="res">Res</string>
    <string name="abel">abel</string>
    <string name="alfonse">alfonse</string>
    <string name="anna">anna</string>
    <string name="arthur">arthur</string>
    <string name="azama">azama</string>
    <string name="azura">azura</string>
    <string name="barst">barst</string>
    <string name="bartre">bartre</string>
    <string name="beruka">beruka</string>
    <string name="bruno">bruno</string>
    <string name="caeda">caeda</string>
    <string name="cain">cain</string>
    <string name="camilla">camilla</string>
    <string name="camus">camus</string>
    <string name="catria">catria</string>
    <string name="cecilia">cecilia</string>
    <string name="cherche">cherche</string>
    <string name="chrom">chrom</string>
    <string name="clarine">clarine</string>
    <string name="cordelia">cordelia</string>
    <string name="corrinf">corrin (f)</string>
    <string name="corrinm">corrin (m)</string>
    <string name="donnel">donnel</string>
    <string name="draug">draug</string>
    <string name="effie">effie</string>
    <string name="elise">elise</string>
    <string name="eliwood">eliwood</string>
    <string name="est">est</string>
    <string name="fae">fae</string>
    <string name="felicia">felicia</string>
    <string name="fir">fir</string>
    <string name="florina">florina</string>
    <string name="frederick">frederick</string>
    <string name="gaius">gaius</string>
    <string name="gordin">gordin</string>
    <string name="gunter">gunter</string>
    <string name="gwendolyn">gwendolyn</string>
    <string name="hana">hana</string>
    <string name="hawkeye">hawkeye</string>
    <string name="hector">hector</string>
    <string name="henry">henry</string>
    <string name="hinata">hinata</string>
    <string name="hinoka">hinoka</string>
    <string name="jagen">jagen</string>
    <string name="jakob">jakob</string>
    <string name="jeorge">jeorge</string>
    <string name="kagero">kagero</string>
    <string name="laslow">laslow</string>
    <string name="leo">leo</string>
    <string name="lilina">lilina</string>
    <string name="linde">linde</string>
    <string name="lissa">lissa</string>
    <string name="lonqu">lon\'qu</string>
    <string name="lucina">lucina</string>
    <string name="lyn">lyn</string>
    <string name="maria">maria</string>
    <string name="marth">marth</string>
    <string name="matthew">matthew</string>
    <string name="merric">merric</string>
    <string name="michalis">michalis</string>
    <string name="minerva">minerva</string>
    <string name="narcian">narcian</string>
    <string name="navarre">navarre</string>
    <string name="niles">niles</string>
    <string name="nino">nino</string>
    <string name="nowi">nowi</string>
    <string name="oboro">oboro</string>
    <string name="odin">odin</string>
    <string name="ogma">ogma</string>
    <string name="olivia">olivia</string>
    <string name="palla">palla</string>
    <string name="peri">peri</string>
    <string name="raigh">raigh</string>
    <string name="raven">raven</string>
    <string name="robinf">robin (f)</string>
    <string name="robinm">robin (m)</string>
    <string name="roy">roy</string>
    <string name="ryoma">ryoma</string>
    <string name="saizo">saizo</string>
    <string name="sakura">sakura</string>
    <string name="selena">selena</string>
    <string name="serra">serra</string>
    <string name="setsuna">setsuna</string>
    <string name="shanna">shanna</string>
    <string name="sharena">sharena</string>
    <string name="sheena">sheena</string>
    <string name="sophia">sophia</string>
    <string name="stahl">stahl</string>
    <string name="subaki">subaki</string>
    <string name="sully">sully</string>
    <string name="takumi">takumi</string>
    <string name="tharja">tharja</string>
    <string name="tiki">tiki</string>
    <string name="tiki_young">tiki (young)</string>
    <string name="ursula">ursula</string>
    <string name="veronica">veronica</string>
    <string name="virion">virion</string>
    <string name="wrys">wrys</string>
    <string name="xander">xander</string>
    <string name="zephiel">zephiel</string>
    <string name="ephraim">ephraim</string>
    <string name="julia">julia</string>
    <string name="seliph">seliph</string>
    <string name="eirika">eirika</string>
    <string name="addedtocollection">added to collection.</string>
    <string name="mycollection">My Heroes</string>
    <string name="attributeheader">Attribute</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl40">Level 40</string>
    <string name="contactme">Contact me</string>
    <string name="contactmetext">You can contact me for corrections, bug reports, or feature requests!\nMail contact.c4stor@gmail.com or pm me on reddit : u/C4stor</string>
    <string name="export_collection">Export collection</string>
    <string name="exportcollok">Collection copied to clipboard</string>
    <string name="collection">Collection</string>
    <string name="lachesis">lachesis</string>
    <string name="eldigan">eldigan</string>
    <string name="sanaki">sanaki</string>
    <string name="olwen">olwen</string>
    <string name="reinhardt">reinhardt</string>
    <string name="klein">klein</string>
    <string name="sort_by_name">Name</string>
    <string name="by_stars">By Rarity</string>
    <string name="by_add_date">Date</string>
    <string name="bst">Σ</string>
    <string name="downloading">Downloading latest data</string>
    <string name="ninian">ninian</string>
    <string name="lucius">lucius</string>
    <string name="jaffar">jaffar</string>
    <string name="rebecca">rebecca</string>
    <string name="priscilla">priscilla</string>
    <string name="karel">karel</string>
    <string name="no_skills">Skills Off</string>
    <string name="skills_on">Skills On</string>
    <string name="skills">Skills</string>
    <string name="camillaeaster">Camilla - Easter</string>
    <string name="chromeaster">Chrom - Easter</string>
    <string name="xandereaster">Xander - Easter</string>
    <string name="lucinaeaster">Lucina - Easter</string>
    <string name="alm">alm</string>
    <string name="clair">clair</string>
    <string name="faye">faye</string>
    <string name="lukas">lukas</string>
    <string name="ike">ike</string>
    <string name="mist">mist</string>
    <string name="soren">soren</string>
    <string name="titania">titania</string>
    <string name="celica">celica</string>
    <string name="boey">boey</string>
    <string name="genny">genny</string>
    <string name="mae">mae</string>
    <string name="lloyd">lloyd</string>
    <string name="caedabridal">Caeda - Bridal</string>
    <string name="charlottebridal">Charlotte - Bridal</string>
    <string name="lynbridal">Lyn - Bridal</string>
    <string name="cordeliabridal">Cordelia - Bridal</string>
    <string name="comment">Comment</string>
    <string name="empty_collection">You don\'t have anyone in your collection.\nAdd some using the + button in the IV finder.</string>
    <string name="athena">Athena</string>
    <string name="luke">Luke</string>
    <string name="katarina">Katarina</string>
    <string name="roderick">Roderick</string>
    <string name="maskedmarth">Marth (Masked)</string>
    <string name="skill_management">Skill management</string>
    <string name="skill_equipped">Equipped</string>
    <string name="skill_learned">Learned</string>
    <string name="skill_learnable">Learnable</string>
    <string name="skill_to_inherit">To inherit</string>
    <string name="legion">Legion</string>
    <string name="clarisse">Clarisse</string>
    <string name="fredericksummer">Frederick - Summer</string>
    <string name="gaiussummer">Gaius - Summer</string>
    <string name="robinfsummer">Robin (f) - Summer</string>
    <string name="tikisummer">Tiki - Summer</string>
    <string name="tobin">tobin</string>
    <string name="berkut">berkut</string>
    <string name="clive">clive</string>
    <string name="delthea">delthea</string>
    <string name="gray">gray</string>
    <string name="leon">leon</string>
    <string name="mathilda">mathilda</string>
    <string name="saber">saber</string>
    <string name="sonya">sonya</string>
    <string name="xandersummer">Xander - Nohrian Summer</string>
    <string name="leosummer">Leo - Nohrian Summer</string>
    <string name="elisesummer">Elise - Nohrian Summer</string>
    <string name="corrinfsummer">Corrin - Nohrian Summer</string>
    <string name="valter">Valter</string>
    <string name="tana">Tana</string>
    <string name="seth">Seth</string>
    <string name="innes">Innes</string>
    <string name="amelia">Amelia</string>
    <string name="nephenee">Nephenee</string>
    <string name="oscar">Oscar</string>
    <string name="elincia">Elincia</string>
    <string name="braveike">Brave Ike</string>
    <string name="bravelyn">Brave Lyn</string>
    <string name="bravelucina">Brave Lucina</string>
    <string name="braveroy">Brave Roy</string>
    <string name="blackknight">Black Knight</string>
</resources>
