<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/gotofinder"
        android:icon="@drawable/search"
        android:title="@string/app_name"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/gotocollection"
        android:icon="@drawable/collection"
        android:title="@string/collection"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/toggleNakedView"
        android:icon="@drawable/skill_icon"
        android:title="@string/no_skills"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copycollectiontoclipboard"
        android:title="@string/export_collection"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact"
        android:title="@string/contactme"
        app:showAsAction="never" />

    <item
        android:id="@+id/language"
        android:title="Language"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/languageUS"
                android:title="English" />
            <item
                android:id="@+id/languageES"
                android:title="Español" />
            <item
                android:id="@+id/languageFR"
                android:title="Français" />
            <item
                android:id="@+id/languageJA"
                android:title="日本語" />
        </menu>
    </item>

</menu>